# macropy

./: pyproject.toml  setup.py
macropy/: __init__.py  case_classes.py  peg.py  tracing.py
macropy/core/: __init__.py  compat.py  exact_src.py  failure.py  hquotes.py  import_hooks.py  macros.py
macropy/core/test/: __init__.py  analysis.py  exact_src.py  exact_src_macro.py  gen_sym_macro.py  unparse.py  walkers.py
macropy/core/test/exporters/: pyc_cache_macro.py
macropy/core/test/macros/: aliases_macro.py  basic_expr_macro.py  not_imported_macro.py
macropy/experimental/: js_snippets.py  pattern.py  pinq.py
macropy/test/: case_classes.py  tracing.py
