[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name='macropy'
version='2.0'
description='Macros for Python: Quasiquotes, Case Classes, LINQ and more!'
license={text= 'MIT'}
readme='readme.rst'
authors=[{name = 'Li Haoyi, Justin Holmgren', email='haoyi.sg@gmail.com'}]
classifiers=[
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: Implementation :: CPython',
    'Programming Language :: Python :: Implementation :: PyPy',
    'Topic :: Software Development :: Code Generators',
]
requires-python='>=3.8,<3.11'